5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1747_1537.log
== TEST (2019-05-16 11:06:50) 
-- CODE:
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + x**i/factorial(i+1)
	i =i+1
	
print(round(soma)

-- ERROR:
File "XXXX", line 13
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:07:34) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + x**i/factorial(i+1)
	i =i+1
	
print(round(soma)

-- ERROR:
File "XXXX", line 14
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:07:46) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + x**i/factorial(i+1)
	i =i+1
print(round(soma)

-- ERROR:
File "XXXX", line 13
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:08:03) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + x**i/factorial(i+1)
	i =i+1
print(round(soma))

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:08:38) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + x**i/factorial(i+1)
	i =i+1
print(round(soma),9)

-- OUTPUT:
2 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:08:50) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + x**i/factorial(i+1)
	i =i+1
print(round(soma) ,9)

-- OUTPUT:
2 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:09:07) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + x**i/factorial(i+1)
	i =i+1
print(round(soma), 9)

-- OUTPUT:
2 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:09:21) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + x**i/factorial(i+1)
	i =i+1
print(round(soma))

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:09:37) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + x**i/factorial(i+1)
	i =i+1
print(round(soma))

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:09:46) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + x**i/factorial(i+1)
	i =i+1
print(round(soma))

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:10:50) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + x**i/factorial(i+1)
	i =i+1
print(round(soma))

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:11:32) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + x**i/factorial(i)
	i =i+1
print(round(soma))

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:11:47) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + x**i/factorial(i)
	i =i+1
print(round(soma))

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:24:29) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + x**i/factorial(2*i)
	i =i+1
print(round(soma))

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:25:46) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + x**i/ factorial(2*i)
	i =i+1
print(round(soma))

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:26:20) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + (x**i)/ factorial(2*i)
	i =i+1
print(round(soma))

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:26:57) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i>=fim):
	soma = soma + (x**i)/ factorial(2*i)
	i =i+1
print(round(soma))

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:32) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + (x**i)/ factorial(2*i)
	i =i+1
print(round(soma))

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:55) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + (x**i)/ factorial(2+i)
	i =i+1
print(round(soma))

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:29:00) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + 1 + (x**i)/ factorial(2+i)
	i =i+1
print(round(soma))

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:29:15) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + 1 + (x**i)/ factorial(2+i)
	i =i+1
print(round(soma))

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:29:33) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + (x**i)/ factorial(2+i)
	i =i+1
print(round(soma))

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:29:53) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0
fim = k-1

while(i<=fim):
	soma = soma + (x**i)/ factorial(2*i+1)
	i =i+1
print(round(soma))

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:32:20) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0


while(i<k):
	soma = soma + (x**i)/ factorial(2*i)
	i =i+1
print(soma)

-- OUTPUT:
1.8814
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:32:29) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0


while(i<k):
	soma = soma + (x**i)/ factorial(2*i)
	i =i+1
print(soma)

-- OUTPUT:
1.8814
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:34:03) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0


while(i<k):
	soma = soma + (x**i)/ factorial(2*i)
	i =i+1
print(round(soma, 9))

-- OUTPUT:
1.8814
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:34:53) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0


while(i<k):
	soma = soma + (x**i)/ factorial(2*i)
	i =i+1
print(round(soma, 9))

-- EXECUTION TIME:
0.20544
-- TEST CASE 1:
---- input:
1.56
3
---- correct output:
3.7768
---- user output:
1.8814
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
1.851921333
---- user output:
1.326347678
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
1.56
---- user output:
1.28
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:36:14) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0


while(i<k):
	soma = soma + (x**i)/ factorial(1+i)
	i =i+1
print(round(soma, 9))

-- OUTPUT:
2.1856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:36:34) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0


while(i<k):
	soma = soma + (x**i)/ factorial(2+i)
	i =i+1
print(round(soma, 9))

-- OUTPUT:
0.8614
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:36:58) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0


while(i<k):
	soma = soma + (x**i+1)/ factorial(1+i)
	i =i+1
print(round(soma, 9))

-- OUTPUT:
3.852266667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:37:16) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0


while(i<k):
	soma = soma + (x**i)/ factorial(1+i)
	i =i+1
print(round(soma, 9))

-- OUTPUT:
2.1856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:37:32) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0


while(i<k):
	soma = soma + (x**i+1)/ factorial(1+i)
	i =i+1
print(round(soma, 9))

-- OUTPUT:
3.852266667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:37:43) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0


while(i<k):
	soma = soma + (x**i+1)/ factorial(1+i)
	i =i+1
print(round(soma, 9))

-- EXECUTION TIME:
0.20617
-- TEST CASE 1:
---- input:
1.56
3
---- correct output:
3.7768
---- user output:
3.852266667
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
1.851921333
---- user output:
3.092330333
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
1.56
---- user output:
2.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:38:46) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0


while(i<k):
	soma = soma + (x**i)/ factorial(1+i)
	i =i+1
print(round(soma, 9))

-- OUTPUT:
2.1856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:39:18) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0


while(i<k):
	soma = soma + (x**i)/ factorial(1*i)
	i =i+1
print(round(soma, 9))

-- OUTPUT:
3.7768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:39:29) 
-- CODE:
from math import*
x = float(input("insira uma numero: "))
k = int(input("quantidade de termos: "))

soma = 0
i = 0


while(i<k):
	soma = soma + (x**i)/ factorial(1*i)
	i =i+1
print(round(soma, 9))

-- EXECUTION TIME:
0.156631
-- TEST CASE 1:
---- input:
1.56
3
---- correct output:
3.7768
---- user output:
3.7768
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
1.851921333
---- user output:
1.851921333
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
1.56
---- user output:
1.56
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
